--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,20 @@ body {
 }
 .mark {
   list-style: none;
+  margin: 0;
 }
 .link {
   text-decoration: none;
+  margin: 0;
+}
+h1, h2, h3, p {
+  margin: 0;
+}
+ul {
+  padding-left: 0;
+}
+.hidden {
+  display: none;
 }
 .header .logo {
   color: var(--headings-color);
@@ -31,6 +42,21 @@ body {
 }
 
 /* Navigation style */
+.main-nav {
+  display: flex;
+}
+.main-nav .item + .item {
+  margin-left: 40px;
+}
+.main-nav .link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.site-nav {
+  display: flex;
+  margin-left: 77px;
+}
 .site-nav .link {
   color: var(--headings-color);
 
@@ -45,8 +71,13 @@ body {
 .site-nav .link:active {
   color: var(--primery-color);
 }
+.auth-nav {
+  display: flex;
+  margin-left: auto;
+}
 .auth-nav .link {
   color: var(--bodytext-color);
+  display: flex;
 
   letter-spacing: 0.02em;
   line-height: 1.5;
@@ -59,20 +90,29 @@ body {
 /* Hero */
 .hero {
   background: var(--headings-color);
+
+  padding-top: 192px;
+  padding-bottom: 192px;
+  text-align: center;
 }
 .hero-title {
   color: var(--primery-white-color);
-
+  width: 495px;
+  margin-left: auto;
+  margin-right: auto;
+  
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
 }
 
 /* Button */
 .btn-primery {
   color: var(--primery-white-color);
   background: var(--primery-color);
+  padding: 16px 32px;
+  margin-top: 48px;
+  border-radius: 4px;
 
   font-family: inherit;
   font-size: 16px;
@@ -85,6 +125,8 @@ body {
 .btn-secondary {
   color: var(--primery-color);
   background: #e7e9fc;
+  padding: 8px 16px;
+  border-radius: 4px;
 
   font-family: inherit;
   font-size: 16px;
@@ -120,10 +162,25 @@ body {
 /* Features style */
 .features-list .title {
   color: var(--headings-color);
+  width: 264px;
 
   font-size: 20px;
   letter-spacing: 0.02em;
   line-height: 1.2;
+}
+.features-list {
+  display: flex;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.features-list .item {
+    width: 264px;
+}
+.features-list .item + .item {
+    margin-left: 24px;
+}
+.work-list {
+  margin-top: 72px;
 }
 
 /* Our employees */
@@ -150,6 +207,7 @@ body {
 .projects-list .text {
   letter-spacing: 0.02em;
   line-height: 1.5;
+  margin-top: 8px;
 }
 
 /* Footer */
@@ -167,4 +225,26 @@ body {
 }
 .footer .text {
   color: #e7e9fc;
+}
+
+/* Позиціонування елементів */
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1158px;
+
+  outline: 2px solid crimson;
+}
+
+/* Portfolio Filter */
+.filter-list {
+  display: flex;
+  justify-content: center;
+  padding-top: 96px;
+  padding-bottom: 72px;
+}
+.filter-list .item + .item {
+  margin-left: 24px;
 }
